# solrisc0prj1

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/smartcontract/: Cargo.toml
methods/smartcontract/src/: lib.rs
sovcore/: Cargo.toml  README.md
sovcore/src/: context.rs  lib.rs  prover_context.rs  zk_context.rs
