[package]
name = "sovcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
risc0-zkvm = { version = "0.13.0", optional=true }

[features]
default = ["prover"]
native = []
prover = ["dep:risc0-zkvm"]
zk = ["dep:risc0-zkvm"]
