[package]
name = "sovcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
serde = { version = "1.0", default-features = false }
risc0-zkvm = { version = "0.12", default-features = false }

[features]
default = []
native = []
prove = ["risc0-zkvm/prove"]
zk = []
